[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/HUD/PlayerInterface/CardManager/CardManager.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/HUD/PlayerInterface/PlayerInterface.gd" type="Script" id=2]
[ext_resource path="res://Scenes/HUD/PlayerInterface/HandManager/HandManager.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/HUD/PlayerInterface/BattleBoard/PlayerBoard/PlayerBoard.tscn" type="PackedScene" id=4]

[node name="PlayerInterface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 440.0, 352.0 ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 32.0 ]
}

[node name="CardManager" parent="." instance=ExtResource( 1 )]

[node name="BattleBoard" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="BattleBoard"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="BattleBoard/MarginContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 1248.0
margin_bottom = 688.0

[node name="OpponentsBoard" type="Control" parent="BattleBoard/MarginContainer/VBoxContainer"]
margin_right = 1216.0
margin_bottom = 326.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerBoard" parent="BattleBoard/MarginContainer/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 330.0
margin_right = 1216.0
margin_bottom = 656.0

[node name="HandContainer" type="CenterContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -280.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="HandContainer"]
margin_left = 640.0
margin_top = 140.0
margin_right = 640.0
margin_bottom = 140.0

[node name="HandManager" parent="HandContainer/Control" instance=ExtResource( 3 )]
